--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ flow_based/data/supervised/models_no-preprocess/models
 flow_based/data/supervised/models_no-preprocess/outputs
 flow_based/data/supervised/models_preprocess/models
 flow_based/data/supervised/models_preprocess/outputs
+plots.ipynb
