--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ flow_based/data/unsupervised/selected_features/models
 flow_based/data/unsupervised/selected_features/outputs
 plots.ipynb
 flow_based/src/reports
+flow_based/src/__pycache__
