--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ flow_based/data/unsupervised/selected_features/outputs
 plots.ipynb
 flow_based/src/reports
 flow_based/src/__pycache__
+generated_output.csv
